--- a/package.json
+++ b/package.json
@@ -39,5 +39,6 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://s9one1.github.io/movie_app_2021"
+  
+  "homepage" : "c://DeveloperN/movie21/"
 }
