--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "c://DeveloperN/movie21/"
+  "homepage": "https://s9one1.github.io/movie_app_2021"
 }
